Completed ISet.h, HashSet.h, and tst_HashSet.cpp

--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,7 @@ cython_debug/
 # Visual Studio Code (from https://github.com/github/gitignore/blob/master/Global/VisualStudioCode.gitignore)
 # ==========
 
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
